[package]
name = "clatter_rattles_rs"
version = "0.1.0"
authors = ["bartossh <lenart.consulting@gmail.com>"]
edition = "2018"

[dependencies]
rustfft = "3.0"
minimp3 = "0.3"
redis = "0.15"
rayon = "1.3"
gstreamer = "0.15"
crossbeam-channel = "0.7"

# standard crate data is left out
[dev-dependencies]
rand = "0.7"

