[package]
name = "clatter_rattles_rs"
version = "0.1.0"
authors = ["bartossh <lenart.consulting@gmail.com>"]
edition = "2018"

[dependencies]
rustfft = "3.0"
minimp3 = "0.3"
redis = "0.15"
rayon = "1.3"
crossbeam-channel = "0.4"
reqwest = "0.10"
m3u8-rs = "1.0"
futures-util = "0.3"
tokio = "0.2"
bytes = "0.5"

# standard crate data is left out
[dev-dependencies]
rand = "0.7"
futures-await-test = "0.3"
